--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^8.3.3",
+    "firebase-admin": "^10.0.0",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
