--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase-admin": "^10.0.0",
     "next": "12.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-file-uploader": "^2.4.4",
+    "sweetalert2": "^11.2.1"
   },
   "devDependencies": {
     "eslint": "7",
