--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "firebase": "^8.3.3",
     "firebase-admin": "^10.0.0",
-    "next": "12.0.1",
+    "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-file-uploader": "^2.4.4",
