--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "firebase": "^8.3.3",
     "firebase-admin": "^10.0.0",
     "next": "^12.0.7",
